erDiagram
    USERS {
        int id PK
        string name
        string email
        string password_hash
        string role
    }

    GARAGES {
        int id PK
        int owner_id FK
        string title
        string address
        text description
    }

    BOOKINGS {
        int id PK
        int garage_id FK
        int renter_id FK
        datetime start_dt
        datetime end_dt
        string status
        decimal total
    }

    PAYMENTS {
        int id PK
        int booking_id FK
        string provider
        decimal amount
        string status
    }

    REVIEWS {
        int id PK
        int booking_id FK
        int renter_id FK
        int rating
        text comment
    }

    USERS ||--o{ GARAGES : "publica"
    USERS ||--o{ BOOKINGS : "realiza"
    GARAGES ||--o{ BOOKINGS : "recibe"
    BOOKINGS ||--|| PAYMENTS : "tiene"
    BOOKINGS ||--o{ REVIEWS : "genera"
    USERS ||--o{ REVIEWS : "escribe"